--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -3,14 +3,12 @@
   <body>
     <h1>ADT Changelog</h1>
     <p>1.0.6 Changes</p>
-	<p>CraftedWild's titles located on the top have been revamped.
-	Arkham's titles located on the top have been revamped.</p>
-	<p>Hover elements have been removed.</p>
+	<p>CraftedWild's titles have been revamped.
+	Arkham's titles have been revamped.</p>
 	
 	<p>
-	Scrolling on a notification will no longer appear white.
-	Notification elements have been reworked.
-	Bordering for notifications have been removed.</p>
-	<p>All colouring schemes for menus have undergone a colour rework.
-	General bug fixes.</p>	
+	Scrolling on a notification will not be white.</p>
+	<p>Notifications have been reworked.</p>
+	
+	<p>Menus have undergone a colour rework.</p>	
   </body>
