--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -2,13 +2,7 @@
   </head>
   <body>
     <h1>ADT Changelog</h1>
-    <p>1.0.6 Changes</p>
-	<p>CraftedWild's titles have been revamped.
-	Arkham's titles have been revamped.</p>
-	
-	<p>
-	Scrolling on a notification will not be white.</p>
-	<p>Notifications have been reworked.</p>
-	
-	<p>Menus have undergone a colour rework.</p>	
+    <p>1.0.6.1 Changes</p>
+	<p>Spoilers have been fixed.
+	Bordering around spoilers has darkened.</p>
   </body>
