--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -2,7 +2,7 @@
   </head>
   <body>
     <h1>ADT Changelog</h1>
-    <p>1.0.6.1 Changes</p>
-	<p>Spoilers have been fixed.
-	Bordering around spoilers has darkened.</p>
+    <p>1.0.6.2 Changes</p>
+	<p>Extension now has a new icon.
+	File size has been reduced.</p>
   </body>
