--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -2,7 +2,11 @@
   </head>
   <body>
     <h1>ADT Changelog</h1>
-    <p>1.0.6.2 Changes</p>
-	<p>Extension now has a new icon.
-	File size has been reduced.</p>
+    <p>1.0.6.3 Changes</p>
+	<p>Colouring scheme improved.</p>
+	<p>Colour scheme issues fixed.</p>
+	<p>Buttons have been darkened.</p>
+	<p>Bugs have been fixed.</p>
+	<p>Total overhaul of underline code.</p>
+	<p>Many other improvements.</p>
   </body>
