--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -2,11 +2,11 @@
   </head>
   <body>
     <h1>ADT Changelog</h1>
-    <p>1.0.6.3 Changes</p>
-	<p>Colouring scheme improved.</p>
-	<p>Colour scheme issues fixed.</p>
-	<p>Buttons have been darkened.</p>
+    <p>1.0.6.4 Changes</p>
+	<p>Removed footer.</p>
+	<p>Improved extension memory usage.</p>
+	<p>Image now loads quicker.</p>
 	<p>Bugs have been fixed.</p>
-	<p>Total overhaul of underline code.</p>
-	<p>Many other improvements.</p>
+	<p>Removed unnecessary elements.</p>
+	<p>Code clean up.</p>
   </body>
