--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -2,11 +2,7 @@
   </head>
   <body>
     <h1>ADT Changelog</h1>
-    <p>1.0.6.4 Changes</p>
-	<p>Removed footer.</p>
-	<p>Improved extension memory usage.</p>
-	<p>Image now loads quicker.</p>
-	<p>Bugs have been fixed.</p>
-	<p>Removed unnecessary elements.</p>
-	<p>Code clean up.</p>
+    <p>1.0.6.5 Changes</p>
+	<p>Minor bug fixes.</p>
+	<p>Colour corrections.</p>
   </body>
