--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -1,8 +1,9 @@
-    <title>ADT Changelog</title>
+    <title>1.0.6.7 Changes</title>
   </head>
   <body>
-    <h1>ADT Changelog</h1>
-    <p>1.0.6.5 Changes</p>
-	<p>Minor bug fixes.</p>
-	<p>Colour corrections.</p>
+	<h1>1.0.6.7 Changes</h1>
+	<p>Images are now rendered locally.</p>
+	<p>Fixed "Members" colouring of Staff titles.</p>
+	<p>Cleaned up code.</p>
+	<p>Fixed text clarity issues for Skyblocky.</p>
   </body>
