--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -1,9 +1,9 @@
-    <title>1.0.6.7 Changes</title>
+    <title>1.0.6.9 Changes</title>
   </head>
   <body>
-	<h1>1.0.6.7 Changes</h1>
-	<p>Images are now rendered locally.</p>
-	<p>Fixed "Members" colouring of Staff titles.</p>
-	<p>Cleaned up code.</p>
-	<p>Fixed text clarity issues for Skyblocky.</p>
+	<h1>1.0.6.9 Changes</h1>
+	<p>Improved image loading times.</p>
+	<p>Darkened buttons under Page Nav.</p>
+	<p>Decreased file size.</p>
+	<p>Changed some internal code.</p>
   </body>
