--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -1,9 +1,8 @@
-    <title>1.0.6.9 Changes</title>
+    <title>1.0.7.0 Changes</title>
   </head>
   <body>
-	<h1>1.0.6.9 Changes</h1>
-	<p>Improved image loading times.</p>
-	<p>Darkened buttons under Page Nav.</p>
-	<p>Decreased file size.</p>
-	<p>Changed some internal code.</p>
+	<h1>1.0.7 Changes</h1>
+	<p>Cut down extension size.</p>
+	<p>Improved loading times.</p>
+	<p>Fixed a minor button issue.</p>
   </body>
