--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -5,4 +5,7 @@
 	<p>Cut down extension size.</p>
 	<p>Improved loading times.</p>
 	<p>Fixed a minor button issue.</p>
+	<p>Colouring has now been centralised.</p>
+	<p>Background colouring has now been cleaned.</p>
+	<p>General improvements.</p>
   </body>
