--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -1,11 +1,8 @@
-    <title>1.0.7.0 Changes</title>
+    <title>1.0.7.2 Changes</title>
   </head>
   <body>
-	<h1>1.0.7 Changes</h1>
-	<p>Cut down extension size.</p>
-	<p>Improved loading times.</p>
-	<p>Fixed a minor button issue.</p>
-	<p>Colouring has now been centralised.</p>
-	<p>Background colouring has now been cleaned.</p>
-	<p>General improvements.</p>
+	<h1>1.0.7.2 Changes</h1>
+	<p>Removed support for CraftedWild.</p>
+	<p>Removed support for Skyblocky.</p>
+	<p>Added support for CandyCraft. (Beta phase)</p>
   </body>
