--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -1,8 +1,6 @@
-    <title>1.0.7.2 Changes</title>
+    <title>1.0.8.1 Changes</title>
   </head>
   <body>
-	<h1>1.0.7.2 Changes</h1>
-	<p>Removed support for CraftedWild.</p>
-	<p>Removed support for Skyblocky.</p>
-	<p>Added support for CandyCraft. (Beta phase)</p>
+	<h1>1.0.8.1 Changes</h1>
+	<p>Changes located on Github.</p>
   </body>
