--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -1,6 +1,7 @@
-    <title>1.0.8.1 Changes</title>
+    <title>1.0.8.3 Changes</title>
   </head>
   <body>
-	<h1>1.0.8.1 Changes</h1>
-	<p>Changes located on Github.</p>
+	<h1>1.0.8.3 Changes</h1>
+	<p>Compressed background image.</p>
+	<p>Resources now load faster.</p>
   </body>
