--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -1,7 +1,6 @@
-    <title>1.0.8.3 Changes</title>
+    <title>1.0.8.5</title>
   </head>
   <body>
-	<h1>1.0.8.3 Changes</h1>
-	<p>Compressed background image.</p>
-	<p>Resources now load faster.</p>
+	<h1>1.0.8.5 Changes</h1>
+	<p>Issue with hover previews has been fixed.</p>
   </body>
