--- a/Extension-Files/gui.html
+++ b/Extension-Files/gui.html
@@ -1,6 +1,6 @@
-    <title>1.0.8.5</title>
+    <title>Latest Changes</title>
   </head>
   <body>
-	<h1>1.0.8.5 Changes</h1>
-	<p>Issue with hover previews has been fixed.</p>
+	<h1>Changes:</h1>
+	<p>Available on Github.</p>
   </body>
